learn css new elements

--- a/Exercises/Exercise3.html
+++ b/Exercises/Exercise3.html
@@ -24,6 +24,11 @@
   width:120px;
   border-radius: 20px;
   cursor: pointer;
+  opacity: 20;
+}
+
+.Add-to-Cart{
+  opacity: 20;
 }
 .Sign-up{
   background-color: green;
@@ -54,7 +59,19 @@
   height: 35px;
   border-width: 1px;
   width: 90px;
+  cursor: pointer;
 }
+.Save:hover{     /*hover is used to make bg colour popup when curesor goes to that perticular button*/
+  background-color:blue ;
+  color: white;
+}
+
+
+.Save:active{
+  opacity:10;
+}
+
+
 .Apply-on-company{
   width: 250px;
   height: 35px;
@@ -74,6 +91,8 @@
   border-width: 1px;
   height:30;
   width:80px;
+  cursor: pointer;
+  transition: opacity 1s;
 }
 
 </Style>
