Lesson 5 text and style

--- a/Exercise-4/4k_marginAndPadding.html
+++ b/Exercise-4/4k_marginAndPadding.html
@@ -71,3 +71,15 @@
   padding-right: 10px;
 }
 </style>
+
+
+<button class="sub">
+  Subscribe
+</button>
+
+<style>
+.sub{
+  background-color:red;
+  color: white;
+}
+</style>
