--- a/2Text-And-Style/text.html
+++ b/2Text-And-Style/text.html
@@ -49,7 +49,7 @@
     padding-bottom: 10px;
     /* text-decoration: underline;*/
      /*it underline entire text but we want only to underline shop now 
-    so we do thet ??
+    so how  we do that ??
     we have to used text element in paragraph P
     
     */
@@ -71,7 +71,7 @@
 </p>
 
 <!-- &#183 it is an  html entity code for middle dot we can search on google
- for various entity use  like check mark and other-->
+ for various entity use  like check-mark and other-->
 
 <p class="veiw-and-date">
     3.4M views &#183 6 months ago 
