--- a/Exercise-10/10a.html
+++ b/Exercise-10/10a.html
@@ -3,15 +3,24 @@
 
 <head>
     <title> exercise 10</title>
-    <link rel="stylesheet" href="10a.css">
+    <link rel="stylesheet" href="style/10a.css">
 </head>
 
 <body>
-    <div class="block">
-        <img src="img/images2.jpg">
-        <h2>Oliver</h2>
-        <p>the cat popular</p>
+    <div class="user-row">
+
+        <img class="img" src="img/images2.jpg">
+
+        <div class="user-info">
+
+            <p class="name">Oliver</p>
+            <p class="info">the cat</p>
+            <p class="status">Popuar</p>
+
+        </div>
+        <button class="button">Follow</button>
     </div>
+    
 </body>
 
 </html>
